--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       <img class="img2" src="images/dice6.png">
     </div>
 
+
+    <!-- onClick="window.location.reload(); -->
   </div>
+
+  <button type="button" class="refresh" onClick={window.location.reload();}>Refresh Me!!</button>
 
   <script src="index.js"></script>
 
